# reverse-idl-parser

./: 6LtLpnUFNByNXLyCoK9wA2MykKAmQNZKBdY8s47dehDc.json  Cargo.toml  JUP6LkbZbjS1jKKwapdHNy74zcZ3tLUZoi5QNyVTaV4.json  README.md  test_idls.rs
src/: lib.rs  on_chain_idl.rs  parse_idl.rs  value.rs
src/schema/: bytes_deserialize.rs  json_serialize.rs  mod.rs  on_chain_serialization.rs
tests/: idl_parse.rs  scope_enum_panic.rs
tests/idls/: drift.json
